<resources>
    <string name="app_name">VTA</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign Up</string>
    <string name="title_activity_sign_up">Sign Up Form</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <string name="error_mismatch_password">Passwords don\'t match</string>
    <string name="user_created">User created, go ahead and login</string>
    <string name="err_user_exists">User exists already</string>

    <string name="title_activity_maps">Home</string>
    <string name="location_rationale">Location permission is needed to show your current location on the map.</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCXJ7u2WuQDPBemTl6SAU1xhOUJ9PUhSkw</string>
    <string name="to_location">Destination</string>
    <string name="from_location">Source</string>
    <string name="out_of_service_region">We do not serve this region yet</string>
    <string name="offline_alert">Currently offline</string>
    <string name="sync_alert">Synchronizing...\nThis may take time</string>
    <string name="no_routes_in_region">There are no routes through served regions</string>
    <string name="signup_question">Create an Account</string>
</resources>
