<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.beproject.group1.vta.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
         />
    <TextView
        android:visibility="gone"
        android:id="@+id/sync_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_alert"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/splash_name"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/project_logo"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:textColor="@android:color/white"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:textColorHint="@color/colorAccent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:textColor="@android:color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceLarge"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:clickable="true"
                android:text="@string/signup_question"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
